--- a/src/app/features/pages/admin/produtos/imageDropCarrossel/image-drop-carrossel.component.scss
+++ b/src/app/features/pages/admin/produtos/imageDropCarrossel/image-drop-carrossel.component.scss
@@ -90,6 +90,22 @@
   margin-top: 10px;
 }
 
+.limit-reached-message {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  font-weight: bold;
+  color: #d32f2f; // vermelho suave
+  border: 2px dashed #ccc;
+  border-radius: 8px;
+  background-color: #fce4ec;
+  padding: 10px;
+  font-size: 14px;
+  text-align: center;
+}
+
+
 
 
 
