Criando tela Categorias | Limitando para enviar 3 img no cadastro de produtos. Page Produtos. v02

--- a/src/app/features/pages/admin/produtos/imageDropCarrossel/image-drop-carrossel.component.html
+++ b/src/app/features/pages/admin/produtos/imageDropCarrossel/image-drop-carrossel.component.html
@@ -25,7 +25,7 @@
           <mat-icon>delete</mat-icon>
         </button>
       </div>
-    } @else if (images.length < 3) {
+    } @else if (images.length < MAX_IMAGENS) {
       <div class="drop-area"
            (click)="fileInput.click()"
            (drop)="onDrop($event)"
