--- a/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.scss
+++ b/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.scss
@@ -75,7 +75,7 @@
 
     }
 
-    .ng-todosProdutos {
+    .ng-todosProdutos, .custom-autocomplete-panel {
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
