--- a/src/app/features/pages/admin/produtos/categorias/categorias.component.html
+++ b/src/app/features/pages/admin/produtos/categorias/categorias.component.html
@@ -25,7 +25,7 @@
               @if (activeTab === 'category') {
               <div [@fadeInOut]>
                 <fieldset class="ng-fieldset">
-                  <legend for="categoriaId">Categoria do Produto: </legend>
+                  <legend for="categoriaId">Pesquisar Categorias</legend>
                   <input class="ng-input" type="text" placeholder="Pesquise a categoria" (click)="resetarCampoCategoria()"
                     (focus)="abrirAutocomplete()" formControlName="categoriaId"
                     matAutocompletePosition="below" >
