Adicionando button more e mat-menu v01

--- a/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.html
+++ b/src/app/features/pages/admin/produtos/produtosAdmin/produtosAdmin.component.html
@@ -27,9 +27,9 @@
         <!-- Sempre mostra todos os produtos na tela -->
         @if (!hasSearchValue) {
         @for (item of todosProdutos; track item) {
-        <app-utius (emiter)="rodaFunc(item.idProduto)" [id]="item.idProduto" [titulo]="item.productName"
+        <app-utiusAdmin (emiter)="rodaFunc(item.idProduto)" [id]="item.idProduto" [titulo]="item.productName"
             [price]="item.price" [imagem]="item.imgUrl">
-        </app-utius>
+        </app-utiusAdmin>
         }
         }
 
@@ -38,9 +38,9 @@
         <ul class="custom-autocomplete-panel">
             @for (item of filteredProdutos | async; track item) {
             <li [value]="item.productName">
-                <app-utius (emiter)="rodaFunc(item.idProduto)" [id]="item.idProduto" [titulo]="item.productName"
+                <app-utiusAdmin (emiter)="rodaFunc(item.idProduto)" [id]="item.idProduto" [titulo]="item.productName"
                     [price]="item.price" [imagem]="item.imgUrl">
-                </app-utius>
+                </app-utiusAdmin>
             </li>
             }
         </ul>
