--- a/src/app/features/pages/admin/destaque/destaque.component.html
+++ b/src/app/features/pages/admin/destaque/destaque.component.html
@@ -23,12 +23,12 @@
 
     <div class="area-main">
       @for (produto of item.produtos; track $index) {
-      <app-utius (emiter)="rodaFunc(produto.idProduto)" [id]="produto.idProduto" [titulo]="produto.productName"
-        [price]="produto.price" [imagem]="produto.imgUrl"></app-utius>
+      <app-utiusAdmin (emiter)="rodaFunc(produto.idProduto)" [id]="produto.idProduto" [titulo]="produto.productName"
+        [price]="produto.price" [imagem]="produto.imgUrl"></app-utiusAdmin>
+        
       }
     </div>
   </section>
-
 
 
   }
