--- a/src/app/features/pages/admin/produtos/utiusAdmin/utiusAdmin.component.scss
+++ b/src/app/features/pages/admin/produtos/utiusAdmin/utiusAdmin.component.scss
@@ -7,7 +7,7 @@
     padding: 6px;
     border-radius: 8px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.08);
-
+    margin: 2px;
     border: 1px solid #e0e0e0;
 
     .ng-infor-id {
@@ -85,29 +85,6 @@
 
     position: relative;
 
-    .ng-btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        right: 1px;
-        padding: 5px 0;
-        bottom: 0;
-        position: absolute;
-
-        .btn {
-            width: 92%;
-            padding: 7px 0;
-            transition: background-color 0.1s ease;
-            background-color: #0f7ff7;
-            color: #e0e0e0;
-            cursor: pointer;
-        }
-
-        .btn:hover {
-            background-color: #0056b3;
-        }
-    }
 }
 
 .banner:hover {
@@ -115,6 +92,53 @@
     background-color: rgba(240, 240, 240, 0.3);
 }
 
+.ng-infor-id {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 4px;
+
+    small {
+        color: #777;
+        font-size: 14px;
+    }
+
+    button {
+        padding: 0;
+        width: 36px;
+        height: 36px;
+    }
+
+    mat-icon {
+        font-size: 20px;
+        color: #555;
+    }
+
+}
+
+::ng-deep .mat-mdc-menu-panel {
+    background: var(--background-color-container) !important;
+    border-radius: 12px !important;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.4) !important;
+    margin: 4px;
+}
+
+::ng-deep .mat-mdc-menu-item {
+    font-family: var(--font-family);
+    font-size: 14px;
+    color: white !important;
+    padding: 10px 16px;
+
+    &:hover {
+        background: rgba($color: #fff, $alpha: 0.12) !important;
+        color: white !important;
+    }
+
+    .mat-icon {
+        margin-right: 8px;
+        color: white !important;
+    }
+}
 
 
 // -----------------------------------------------------------------------------------------------------------//
@@ -123,7 +147,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 170px;
+        width: 180px;
         height: 100%;
         padding: 8px;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.08);
@@ -144,7 +168,7 @@
 
         .img {
             width: 100%;
-            height: 130px;
+            height: 140px;
             border-radius: 8px;
             overflow: hidden;
         }
