--- a/src/app/features/pages/admin/produtos/imageDropCarrossel02/image-drop-carrossel.component.scss
+++ b/src/app/features/pages/admin/produtos/imageDropCarrossel02/image-drop-carrossel.component.scss
@@ -7,15 +7,15 @@
   border-radius: 10px;
   padding: 10px;
   background: transparent;
+  width: 330px;
 }
 
 .carousel {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5px;
   width: 100%;
-  height: 260px;
+  height: 280px;
   cursor: grab;
   user-select: none;
 }
@@ -29,6 +29,7 @@
   padding: 8px 0;
   width: 100%;
   height: 100%;
+  gap: 5px;
   scrollbar-width: none;
   align-items: flex-start; /* CORREÇÃO: garantir alinhamento vertical */
 }
@@ -39,16 +40,15 @@
 
 .image-container {
   position: relative;
-  min-width: 250px;
+  min-width: 269px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 10px;
 }
 
 .image-container img {
-  width: 250px;
-  height: 200px;
+  width: 260px;
+  height: 220px;
   object-fit: cover;
   border-radius: 10px;
   border: 2px solid #ccc;
@@ -89,8 +89,8 @@
 
 .drop-area {
   flex-shrink: 0; /* impede que encolha */
-  min-width: 250px;
-  min-height: 200px;
+  width: 260px;
+  height: 210px;
   border: 2px dashed #ccc;
   text-align: center;
   border-radius: 10px;
@@ -98,9 +98,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: red;
+  background-color: #eee;
   cursor: pointer;
-  margin-left: 10px; /* separação das imagens */
+  margin-right: 10px;
 }
 
 .drop-area.limit {
