--- a/src/app/features/pages/admin/destaque/destaque.component.html
+++ b/src/app/features/pages/admin/destaque/destaque.component.html
@@ -23,13 +23,16 @@
 
     <div class="area-main">
       @for (produto of item.produtos; track $index) {
-      <app-utiusAdmin (emiter)="rodaFunc(produto.idProduto)" [id]="produto.idProduto" [titulo]="produto.productName"
-        [price]="produto.price" [imagem]="produto.imgUrl"></app-utiusAdmin>
-        
+      <app-utiusAdmin (editarProdutoEmit)="abrirEdicao(produto.idProduto)" [id]="produto.idProduto"
+        [titulo]="produto.productName" [price]="produto.price" [imagem]="produto.imgUrl"></app-utiusAdmin>
+
       }
     </div>
   </section>
 
 
+  }
+  @if (idProdutoEditando) {
+  <app-update-product [idProduto]="idProdutoEditando" (desbiledCarEmit)="fecharEdicao()"></app-update-product>
   }
 </div>
