--- a/src/app/features/pages/admin/destaque/destaque.component.html
+++ b/src/app/features/pages/admin/destaque/destaque.component.html
@@ -23,7 +23,7 @@
 
     <div class="area-main">
       @for (produto of item.produtos; track $index) {
-      <app-utiusAdmin (editarProdutoEmit)="abrirEdicao(produto.idProduto)" [id]="produto.idProduto"
+      <app-utiusAdmin (emiter)="rodaFunc(produto.idProduto)" (editarProdutoEmit)="abrirEdicao(produto.idProduto)" [id]="produto.idProduto"
         [titulo]="produto.productName" [price]="produto.price" [imagem]="produto.imgUrl"></app-utiusAdmin>
 
       }
