--- a/src/app/shared/component/form-login/form-login.component.html
+++ b/src/app/shared/component/form-login/form-login.component.html
@@ -4,28 +4,37 @@
     </section>
     <fieldset class="ng-fieldset" [ngClass]="{'mudaCor':isRequiredEmail()}">
         <legend>Email</legend>
-            <input type="email" autofocus="on" #form1 (keydown.enter)="mudaCompo(form2)"   autocomplete="username" class="ng-input" placeholder="Email..." formControlName="email" >
+        <input type="email" autofocus="on" #form1 (keydown.enter)="mudaCompo(form2)" autocomplete="username"
+            class="ng-input" placeholder="Email..." formControlName="email">
 
     </fieldset>
     @if (isRequiredEmail()) {
-        <small class="ng-error">Informe o email</small>
+    <small class="ng-error">Informe o email</small>
     }
 
     <fieldset class="ng-fieldset">
         <legend>Senha</legend>
         <div class="ng-password-btn">
-            <input [type]="ativo?'text':'password'" #form2 autocomplete="new-password" class="ng-input" placeholder="Senha..." formControlName="password" >
+            <input [type]="ativo?'text':'password'" #form2 autocomplete="new-password" class="ng-input"
+                placeholder="Senha..." formControlName="password">
             <mat-icon (click)="visible()">{{icon}}</mat-icon>
 
         </div>
     </fieldset>
     @if (isRequiredPassword()) {
-        <div class="ng-error">Informe o senha</div>
+    <div class="ng-error">Informe o senha</div>
     }
 
 
-    <button  mat-flat-button color="secundary" class="ng-btn" (click)="btn()" [disabled]="!this.service.groupform.valid">Login</button>
-    <span class="ng-text" (click)="pageResetPassword()">Esqueceu sua senha?</span>
-    <button class="ng-btn ng-btn-signup" mat-flat-button color="secundary" (click)="pageSignup()">Criar conta</button>
+    <button mat-flat-button color="secundary" class="ng-btn btn-login" (click)="btn()"
+        [disabled]="!this.service.groupform.valid">Login</button>
+
+
+    <div class="btn-auth">
+        <button mat-flat-button class="ng-btn ng-btn-signup" (click)="pageLoginWhatsapp()">Login com Telefone</button>
+        <span class="ng-text" (click)="pageResetPassword()">Esqueceu sua senha?</span>
+        <button class="ng-btn ng-btn-signup" mat-flat-button color="secundary" (click)="pageSignup()">Criar
+            conta</button>
+    </div>
 
 </form>
