Adicionando page login com telefone v04

--- a/src/app/features/pages/auth/signinCodWhatsapp/form-signinCodWhatsapp/form-signinCodWhatsapp.component.html
+++ b/src/app/features/pages/auth/signinCodWhatsapp/form-signinCodWhatsapp/form-signinCodWhatsapp.component.html
@@ -6,7 +6,7 @@
     }
     <div class="container">
         <div class="ng-cont1">
-            <h2>Login com Telefone</h2>
+            <h2>Acessar minha conta</h2>
             <div class="steps-indicator"></div>
         </div>
 
