--- a/src/app/features/pages/v1/buscaProdutos/buscaProdutos.component.html
+++ b/src/app/features/pages/v1/buscaProdutos/buscaProdutos.component.html
@@ -1,10 +1,10 @@
 <app-header [admin]="false"></app-header>
- @if (produtos.length!==0) {
+ @if (produtos?.length!==0) {
 <h1>{{name}}</h1>
  }
      @if (!produtos) {
     <p>Buscando produtos...</p>
-  } @else if (produtos.length === 0) {
+  } @else if (produtos?.length === 0) {
     <div class="produtos">
     <p>Nenhum produto encontrado.</p>
     </div>
@@ -13,9 +13,9 @@
 
     @for (item of produtos; track $index) {
       <app-utius 
-        [titulo]="item.productName" 
-        [imagem]="item.imgUrl" 
-        [price]="item.price">
+        [titulo]="item?.productName" 
+        [imagem]="item?.imgUrl" 
+        [price]="item?.price">
       </app-utius>
     }
     </div>
