Consumingo rotas de auteticação na page login com telefone v02

--- a/src/app/features/pages/v1/homeZapdai/homeZapdai.component.html
+++ b/src/app/features/pages/v1/homeZapdai/homeZapdai.component.html
@@ -16,7 +16,9 @@
             </section>
             <div class="propaganda">
                 @for (empresa of produtos; track $index) {
+                @if (empresa?.produtos?.length) {
                 <app-mais-postados [ativo]="true" [produto]="empresa?.produtos" [empresa]="empresa"></app-mais-postados>
+                }
                 }
             </div>
         </div>
