--- a/src/app/features/pages/v1/loja/loja.component.html
+++ b/src/app/features/pages/v1/loja/loja.component.html
@@ -1,7 +1,7 @@
 @if (produto.idProduto) {
 <div class="produto-detalhes-container">
 
-  @if (produto?.imagens?.length) {
+  @if (produto.imagens.length) {
   <div class="galeria-imagens">
     @for (img of produto.imagens; track $index) {
     <img [src]="img.url" (mousemove)="imagemSelecionadaItem(img.url)"
@@ -11,18 +11,18 @@
   }
 
   <div class="imagem-principal">
-    <img [src]="imagemSelecionada || produto?.imgProduct" alt="Imagem principal" />
+    <img [src]="imagemSelecionada || produto.imgProduct" alt="Imagem principal" />
   </div>
 
   <div class="informacoes">
     <h1>{{ produto?.productName }}</h1>
-    <p class="codigo">Cód.: {{ produto?.codigo }}</p>
+    <p class="codigo">Cód.: {{ produto.codigo }}</p>
 
     <div class="precos">
-      <span class="preco-antigo">R$ {{ produto?.price }}</span>
-      <span class="desconto">Baixou {{ produto?.desconto }}%</span>
-      <span class="preco-final">R$ {{ produto?.price }} <small>no pix</small></span>
-      <span class="parcelamento">ou {{ produto?.parcelas }}</span>
+      <span class="preco-antigo">R$ {{ produto.price }}</span>
+      <span class="desconto">Baixou {{ produto.desconto }}%</span>
+      <span class="preco-final">R$ {{ produto.price }} <small>no pix</small></span>
+      <span class="parcelamento">ou {{ produto.parcelas }}</span>
     </div>
 
     <div class="variacoes">
@@ -38,7 +38,7 @@
       <button class="btn branco">Comprar agora</button>
     </div>
 
-    @if (produto?.empresaDTO?.nomeCompania) {
+    @if (produto?.empresaDTO.nomeCompania) {
     <p class="empresa">Vendido por <strong>{{ produto.empresaDTO.nomeCompania }}</strong></p>
     }
   </div>
