Consumingo rotas de auteticação na page login com telefone v02

--- a/src/app/features/pages/v1/homeZapdai/homeZapdai.component.html
+++ b/src/app/features/pages/v1/homeZapdai/homeZapdai.component.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="ng-itens">
                     @for (categoria of categorias; track $index) {
-                    <app-opcoes-categoria (idevent)="navigate(categoria?.nome)" [url]="categoria?.icone"
+                    <app-opcoes-categoria (idevent)="navigate(categoria.nome)" [url]="categoria.icone"
                         [name]="categoria.nome"></app-opcoes-categoria>
                     }
                 </div>
